src/objects/GDMFSL_Service_Contract_Resource_Pref__c/GDMFSL_Service_Contract_Resource_Pref__c.object-meta.xml
<CustomObject>
    <label>Service Contract Resource Preference</label>
    <nameField>
        <displayFormat>SCRP-{0000}</displayFormat>
        <label>Service Contract Resource Preference Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Resource Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>