src/objects/GDMFSL_Service_Contract_Resource_Pref__c/fields/GDMFSL_Associated_Contract__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Associated_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Contract</label>
    <referenceTo>GDMFSL_Associated_Contract__c</referenceTo>
    <relationshipLabel>Service Contract Resource Preferences</relationshipLabel>
    <relationshipName>GDMFSL_Service_Contract_Resource_Pref</relationshipName>
    <type>Lookup</type>
</CustomField>