src/objects/GDMFSL_Service_Contract_Resource_Pref__c/fields/GDMFSL_Preference_Type__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Preference_Type__c</fullName>
    <label>Preference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>