src/objects/GDMFSL_Service_Contract_Resource_Pref__c/fields/GDMFSL_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Contract Resource Preferences</relationshipLabel>
    <relationshipName>Service_Contract_Resource_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>